yaml_defs/complete-deployment-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: deployment
    app: redis
  name: redis
spec:
  replicas: 1
  nodeName: master
  selector:
   matchLabels:
     app: redis
  template:
    metadata:
      labels:
        app: redis
    containers:
    - image: redis:alpine
      name: deployment
      resources:
        requests:
          cpu: ".2"
      volumeMounts:
      - mountPath: /redis-master-data
        name: data
      - mountPath: /redis-data
        name: redis-config
      ports:
      - containerPort: 6379
    dnsPolicy: ClusterFirst
    restartPolicy: Always
    volumes:
    - name: data
      emptyDir: {}
    - name: redis-config
      configMap:
        name: redis-config
