yaml_defs/pod-definition-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: time-check
  name: time-check
  namespace: dvl1987
spec:
  containers:
  - image: busybox
    name: time-check
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo hello; sleep 10;done"]
    volumeMounts:
    - mountPath: /opt/time
      name: a-volume
  volumes:
  - name: a-volume
    emptyDir: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
