yaml_defs/pod-definition-with-persistent-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
  - env:
    - name: LOG_HANDLERS
      value: file
    image: kodekloud/event-simulator
    imagePullPolicy: Always
    name: event-simulator
    volumeMounts:
    - mountPath: /log
      name: log-volume
  volumes:
  - name: log-volume
    # this 19-21
    hostPath:
      path: /var/log/webapp
      type: Directory
    # or 23-24
    # persistentVolumeClaim:
    #   claimName: claim-log-1
