yaml_defs/pod-definition-with-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod
  name: secret
  namespace: dev2406
spec:
  nodeName: master
  containers:
  - command: ["sleep"]
    args: ["3600"]
    image: busybox
    name: pod
    resources: {}
    volumeMounts:
    - name: secret-volume
      mountPath: /etc/secret-volume
      readOnly: true
  volumes:
    - name:  secret-volume
      secret:
        secretName: dotfile-secret
  dnsPolicy: ClusterFirst
  restartPolicy: Always
