yaml_defs/pod-definition-with-taints.yaml
apiVersion: v1
  
kind: Pod

metadata:
  name: bee
  labels:
    app: bee
spec:
  containers:
  - name: nginx-container
    image: nginx
  tolerations:
  - key: spray
    value: mortein
    effect: NoSchedule
    operator: Equal
