yaml_defs/pod-definition.yaml
apiVersion: v1

kind: Pod

metadata:
  name: myapp-pod
  labels:
    app: myapp

spec:
  schedulerName: kube-scheduler-custom
  containers:
    - name: nginx-container
      image: nginx
