yaml_defs/service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30080
  selector:
    app: myapp
    type: back-end
