yaml_defs/ingress-resource-definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vh-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: watch.ecom-store.com
    http:
      paths:
      - backend:
          service:
            name: apparels-service
            port:
              name: 8080
        path: /wear
        pathType: Prefix
  - host: watch.ecom-store.com
    http:
      paths:
      - backend:
          service:
            name: video-service
            port:
              number: 8080
        path: /video
        pathType: Prefix
